force-app/main/default/objects/Inventory_Aging__c/Inventory_Aging__c.object-meta.xml
<CustomObject>
    <label>Inventory Aging</label>
    <nameField>
        <label>Inventory aging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Agings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>