force-app/main/default/objects/Inventory_Aging__c/fields/Abnormal_Inventory_Total_Qty__c.field-meta.xml
<CustomField>
    <fullName>Abnormal_Inventory_Total_Qty__c</fullName>
    <label>Abnormal Inventory Total Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>