force-app/main/default/objects/Inventory_Aging__c/fields/Current_Amt__c.field-meta.xml
<CustomField>
    <fullName>Current_Amt__c</fullName>
    <label>Current Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>