force-app/main/default/objects/Inventory_Aging__c/fields/Current_Qty__c.field-meta.xml
<CustomField>
    <fullName>Current_Qty__c</fullName>
    <label>Current Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>