force-app/main/default/objects/Inventory_Aging__c/fields/Customer_Mode__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Mode</label>
    <referenceTo>Customer_Model_Product__c</referenceTo>
    <relationshipLabel>Inventory Agings</relationshipLabel>
    <relationshipName>Inventory_Agings</relationshipName>
    <type>Lookup</type>
</CustomField>