force-app/main/default/objects/Inventory_Aging__c/fields/Factory_Mode__c.field-meta.xml
<CustomField>
    <fullName>Factory_Mode__c</fullName>
    <label>Factory Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>