force-app/main/default/objects/Inventory_Aging__c/fields/Location_Category__c.field-meta.xml
<CustomField>
    <fullName>Location_Category__c</fullName>
    <label>Location Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>