force-app/main/default/objects/Inventory_Aging__c/fields/Over_2year_Qty__c.field-meta.xml
<CustomField>
    <fullName>Over_2year_Qty__c</fullName>
    <label>Over 2year Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>