force-app/main/default/objects/Inventory_Aging__c/fields/X1_2year_Qty__c.field-meta.xml
<CustomField>
    <fullName>X1_2year_Qty__c</fullName>
    <label>1-2year Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>