force-app/main/default/objects/Inventory_Aging__c/fields/X2months_Qty__c.field-meta.xml
<CustomField>
    <fullName>X2months_Qty__c</fullName>
    <label>2months Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>