force-app/main/default/objects/Inventory_Aging__c/fields/X3months_Amt__c.field-meta.xml
<CustomField>
    <fullName>X3months_Amt__c</fullName>
    <label>3months Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>