force-app/main/default/objects/Inventory_Aging__c/fields/X4_6month_Qty__c.field-meta.xml
<CustomField>
    <fullName>X4_6month_Qty__c</fullName>
    <label>4-6month Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>