force-app/main/default/objects/Inventory_Aging__c/fields/X7mon_1Y_Qty__c.field-meta.xml
<CustomField>
    <fullName>X7mon_1Y_Qty__c</fullName>
    <label>7mon-1Y Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>